# Logsync

./: README.md  module.py  package.json
datasets/: FG and RM List.xlsx  contracts_info.xlsx
sample_json/: bom.json  contracts.json  fg.json  fg_rm.json
server/: README.md  pyproject.toml  server.py
server/Documents/: create_contract.py  create_invoice.py
server/logic/Data/: Data_Definition and WorkFlow.xlsx  FG and RM List.xlsx
server/logic/contract_code/: Contract_code.ipynb
vishal/datasets/: FG and RM List.xlsx  contracts_info.xlsx  inventory.xlsx  invoices.xlsx  open_po.xlsx  production_plans.xlsx
vishal/datasets/template/: inventory.xlsx  invoices.xlsx  open_po.xlsx
vishal/py_codes/: config.txt  module.py
vishal/sample_json/: contracts.json  fg_rm.json  inventory.json  invoices.json  open_po.json  production_plans.json  rm.json
web/: .eslintrc  components.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  heading.tsx  hover-card.tsx  input.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  switch.tsx  table.tsx  tooltip.tsx
web/src/data/: bill-of-materials.json  contracts.json  fg-rm.json  finished-goods.json  raw-materials.json
web/src/hooks/: useAPI.ts  useSetup.ts
web/src/pages/: contract.tsx  dashboard.tsx  error404.tsx  index.tsx  (+3 more)
(+58 files in other folders)
