[tool.poetry]
name = "server"
version = "0.1.0"
description = "A Generative AI orchestrator service in the field of manufacturing and inventory"
authors = ["Nalin Singh <nalinsingh20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
google-cloud-documentai = "^2.25.0"
aiohttp = "^3.9.4"
pip = "^24.0"
install = "^1.3.5"
reportlab = "^4.1.0"
pandas = "^2.2.2"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
